<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        style="@style/image_view_background"
        android:contentDescription="@string/content_description"
        android:src="@drawable/note" />

    <!-- This layout is a view for the music action (skip, play, next) -->
    <LinearLayout
        android:id="@+id/navigation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/linear_layout_button">

            <TextView
                android:id="@+id/playing"
                style="@style/nav_text"
                android:text="@string/now_play" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout_button">

            <TextView
                android:id="@+id/library"
                style="@style/nav_text"
                android:text="@string/library" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout_button">

            <TextView
                android:id="@+id/playlist"
                style="@style/nav_text"
                android:text="@string/playlist" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv"
        android:layout_below="@+id/navigation_text"
        style="@style/text_description"
        android:text="@string/main_library" />

    <GridView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="@dimen/margin_128"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_below="@+id/tv">
    </GridView>

</RelativeLayout>