<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid_item_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/margin_16"
    android:paddingRight="@dimen/margin_16"
    android:paddingBottom="@dimen/margin_16"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/grid_item_album"
        android:layout_width="@dimen/margin_96"
        android:layout_height="@dimen/margin_96"
        android:contentDescription="@string/content_description"
        tools:src="@drawable/album"/>

    <TextView
        android:id="@+id/grid_item_album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/album_name"
        android:textAlignment="center"
        android:textColor="@color/grey_bright"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/grid_item_artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/artiste_name"
        android:textAlignment="center"
        android:textColor="@color/grey_bright"/>

</LinearLayout>