<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/horizontal_player_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_4"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/horizontal_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/album_name"
        android:textSize="24sp"
        android:textColor="@color/grey_bright" />

    <ImageView
        android:id="@+id/horizontal_image_view"
        android:layout_width="@dimen/margin_256"
        android:layout_height="@dimen/margin_256"
        android:layout_marginLeft="@dimen/margin_36"
        android:layout_marginRight="@dimen/margin_36"
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"
        tools:src="@drawable/album" />

    <TextView
        android:id="@+id/horizontal_track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/track_name"
        android:textColor="@color/grey_bright" />

</LinearLayout>