<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/playing_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        tools:context="com.example.android.musicalstructure.MainActivity">

        <!-- This layout is a view for the navigation button -->
        <LinearLayout
            android:id="@+id/navigation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout style="@style/linear_layout_button">

                <TextView
                    android:id="@+id/playing"
                    style="@style/nav_text"
                    android:text="@string/now_play" />

            </LinearLayout>

            <LinearLayout style="@style/linear_layout_button">

                <TextView
                    android:id="@+id/library"
                    style="@style/nav_text"
                    android:text="@string/library" />

            </LinearLayout>

            <LinearLayout style="@style/linear_layout_button">

                <TextView
                    android:id="@+id/playlist"
                    style="@style/nav_text"
                    android:text="@string/playlist" />

            </LinearLayout>

            <LinearLayout style="@style/linear_layout_button">

                <TextView
                    android:id="@+id/streaming"
                    style="@style/nav_text"
                    android:text="@string/search" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv"
            android:layout_below="@+id/navigation_text"
            style="@style/text_description"
            android:text="@string/main_activity" />

        <!-- This scrollView is a view for detail album by track -->
        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:scrollbars="horizontal"
            android:layout_above="@id/seek_bar">

            <LinearLayout
                android:id="@+id/track_album_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_24"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

            </LinearLayout>
        </HorizontalScrollView>

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:thumbTint="@color/blue_light"
            android:progressTint="@color/blue_light"
            android:layout_above="@+id/music_action"
            android:padding="@dimen/margin_8"
            />


        <!-- This layout is a view for the music action (skip, play, next) -->
        <LinearLayout
            android:id="@+id/music_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_16"
            android:orientation="horizontal">

            <LinearLayout style="@style/linear_layout_button">

                <ImageButton
                    android:id="@+id/skip_previous_button"
                    style="@style/image_button"
                    android:src="@drawable/black_circle_skip_previous" />

            </LinearLayout>

            <LinearLayout style="@style/linear_layout_button">

                <ImageButton
                    android:id="@+id/play_button"
                    style="@style/image_button"
                    android:src="@drawable/black_circle_play" />

            </LinearLayout>

            <LinearLayout style="@style/linear_layout_button">

                <ImageButton
                    android:id="@+id/skip_next_button"
                    style="@style/image_button"
                    android:src="@drawable/black_circle_skip_next" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
